# 2025_kn33_oop

./: README.md  _config.yml
1_lab/: README.md  note.ipynb
2_lab/: README.md  note.ipynb  test.json
3_lab/: README.md  note.ipynb
4_lab/: __main__.py  book.py  student.py
5_lab/: README.md  note.ipynb
6_lab/: README.md  anime.py  app.py
6_lab/1_venv/: requirements.txt
6_lab/2_pipenv/: .env  Pipfile
6_lab/3_poetry/: mkdocs.yml  pyproject.toml
6_lab/3_poetry/docs/: api.md  index.md  installation.md  usage.md
7_lab/: pyproject.toml  telegram_post.txt
7_lab/maksym/: agent.py
7_lab/telegram_bot/: __main__.py  agent.py
7_lab/telegram_manager/: agent.py
init/: README.md  test.txt
temp/: note.ipynb
test/: note.ipynb
