[project]
name = "3-poetry"
version = "0.1.0"
description = "Це мій проект з poetry"
authors = [
    {name = "BobasB",email = "bugil.bogdan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jikanpy-v4 (>=1.0.2,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)"
]
